[package]
name = "moonboot"
description = "OTA Bootloader Construction Framework for Rust no_std environments"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Jan-Henrik Bruhn <rust@jhbruhn.de>"]
repository = "https://github.com/jhbruhn/moonboot"
keywords = ["embedded", "no_std", "bootloader", "framework", "ota", "fota", "updater"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moonboot-macros = { path = "./macros", version = "0.1.0-dev" }
heapless = {version = "0.7", features = ["serde"] }
serde = { version = "1.0", features = ["derive"], default-features = false, optional = true }
cortex-m = { version = "0.7", optional = true }
defmt = { version = "0.2", optional = true }
logger-crate = { version = "0.4", optional = true, package = "log" }
crc = "2.0"
desse = { version = "0.2.1", optional = true }
void = { version = "1.0", default-features = false }
embedded-storage = "0.2"


[features]
default = ["ram-state"]
use-log = ["logger-crate"]
use-defmt = ["defmt"]
ram-state = ["desse"]
derive = ["serde"]

defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/assert-rs/predicates-rs/compare/{{tag_name}}...HEAD", exactly=1},
]

[workspace.metadata.release]
shared-version = true

[workspace]
members = [
    "macros",
    ".",
    "codegen",
]
