[package]
name = "moonboot-codegen"
description = "Code generation helpers for moonboot bootloader framework"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Jan-Henrik Bruhn <rust@jhbruhn.de>"]
repository = "https://github.com/jhbruhn/moonboot"
keywords = ["embedded", "no_std", "bootloader", "framework", "fota"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moonboot = { path = "../", version = "0.1.2" }

[package.metadata.release]
shared-version = true
dependent-version = "upgrade"
