[package]
description = "Macros for moonboot bootloader framework"
edition = "2021"
name = "moonboot-macros"
version = "0.1.0-dev"
license = "MIT OR Apache-2.0"
authors = ["Jan-Henrik Bruhn <rust@jhbruhn.de>"]
repository = "https://github.com/jhbruhn/moonboot"
keywords = ["embedded", "no_std", "bootloader", "framework", "ota", "fota", "updater"]

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[package.metadata.release]
tag = false
